# OpenRGB

./: .gitignore  .gitlab-ci.yml  60-openrgb.rules  99-openrgb.rules  AutoStart.cpp  AutoStart.h  CMakeLists.txt  Detector.h  DeviceDetector.cpp  DeviceDetector.h  DeviceType.h  HidDetector.h  IResourceManager.h  Installer.wxs  InstallerTransform.xsl  LogManager.cpp  LogManager.h  NetworkClient.cpp  NetworkClient.h  NetworkProtocol.h  NetworkServer.cpp  NetworkServer.h  OpenRGB.cpp  OpenRGB.pro  OpenRgbInterfaces.h  PluginLoader.cpp  PluginLoader.h  PluginManager.cpp  PluginManager.h  ProfileManager.cpp  ProfileManager.h  README.md  ResourceManager.cpp  ResourceManager.h  SettingsManager.cpp  SettingsManager.h  cli.cpp  fs.h  main.cpp  metadata.h.in  (+2 more)
AutoStart/: AutoStart-linux.cpp  AutoStart-linux.h  AutoStart-windows.cpp  AutoStart-windows.h  AutoStart.cpp  AutoStart.h
Controllers/A4TechController/: A4Tech_Detector.cpp  BloodyKeyboardController.cpp  BloodyKeyboardController.h  RGBController_BloodyKeyboard.cpp  RGBController_BloodyKeyboard.h
Controllers/AMDWraithPrismController/: AMDWraithPrismController.cpp  AMDWraithPrismControllerDetect.cpp  RGBController_AMDWraithPrism.cpp
Controllers/AOCKeyboardController/: AOCKeyboardControllerDetect.cpp
Controllers/AOCMouseController/: AOCMouseControllerDetect.cpp
Controllers/AOCMousematController/: AOCMousematControllerDetect.cpp
Controllers/ASRockPolychromeSMBusController/: ASRockPolychromeSMBusController.cpp  ASRockPolychromeSMBusControllerDetect.cpp
Controllers/ASRockPolychromeUSBController/: ASRockPolychromeUSBController.cpp  ASRockPolychromeUSBController.h  ASRockPolychromeUSBControllerDetect.cpp  RGBController_ASRockPolychromeUSB.cpp  RGBController_ASRockPolychromeUSB.h
Controllers/ASRockSMBusController/: ASRockSMBusControllerDetect.cpp
Controllers/AlienwareController/: AlienwareController.cpp  AlienwareController.h  AlienwareControllerDetect.cpp  RGBController_Alienware.cpp  RGBController_Alienware.h
Controllers/AlienwareKeyboardController/: AlienwareKeyboardControllerDetect.cpp  RGBController_AlienwareAW510K.cpp
Controllers/AnnePro2Controller/: AnnePro2Controller.cpp  AnnePro2Controller.h  AnnePro2ControllerDetect.cpp  RGBController_AnnePro2.cpp  RGBController_AnnePro2.h
Controllers/ArcticController/: ArcticControllerDetect.cpp
Controllers/AsusAuraCoreController/: AsusAuraCoreController.cpp  AsusAuraCoreController.h  AsusAuraCoreControllerDetect.cpp  RGBController_AsusAuraCore.cpp  RGBController_AsusAuraCore.h
FanController/: FanController.cpp  FanController.h  FanController_Network.cpp  FanController_Network.h
KeyboardLayoutManager/: KeyboardLayoutManager.cpp
OpenAuraSDK/: OpenAuraSDK.cpp  smbus_detect.cpp  wmi.cpp  wmi.h
RGBController/: OpenRazerDevices.h  RGBController.cpp  RGBController.h  RGBController_AuraGPU.cpp  RGBController_AuraGPU.h  RGBController_CMMKController.cpp  RGBController_CMMKController.h  RGBController_CMMP750Controller.cpp  RGBController_CMMP750Controller.h  RGBController_CorsairVengeancePro.cpp  RGBController_Faustus.cpp  RGBController_Faustus.h  RGBController_Hue2.cpp  RGBController_HuePlus.cpp  RGBController_LogitechG810.cpp  RGBController_MSIGPU.cpp  RGBController_MSIMysticLight.cpp  RGBController_MSIMysticLight.h  RGBController_NZXTKraken.cpp  RGBController_NZXTKraken.h  RGBController_Network.cpp  RGBController_OpenRazer.cpp  RGBController_RGBFusion2USB.cpp  RGBController_SteelSeriesApex.cpp  RGBController_SteelSeriesApex.h  RGBGroupController.cpp  RGBGroupController.h
debian/: control  rules
dependencies/: CMakeLists.txt  dmiinfo.cpp  dmiinfo.h
dependencies/CRCpp/: CRC.h
dependencies/ColorWheel/: ColorWheel.cpp  ColorWheel.h
dependencies/Swatches/: swatches.cpp  swatches.h
dependencies/hidapi/: hidapi.c
dependencies/hidapi-hotplug/: README.md
dependencies/hidapi-win/: README.md
dependencies/hidapi-win/x64/: hidapi.lib
dependencies/hidapi-win/x86/: hidapi.lib
dependencies/inpout32_1501/MinGW32/: inpout32.h
dependencies/inpout32_1501/MinGW64/: inpout32.h
dependencies/inpout32_src/: hwinterfacedrv.h  inpout32drv.cpp  inpout32drv.def  inpout32drv.rc  osversion.cpp
dependencies/inpout32_src/InstallDriver/: InstallDriver.cpp  InstallDriver.manifest  InstallDriver.rc  InstallDriver.vcproj  ReadMe.txt
dependencies/libcmmk/src/mappings/ansi/: sk630.h
dependencies/libe131/src/: e131.c  e131.cpp  e131.h
dependencies/macUSPCIO/: macUSPCIOAccess.h
dependencies/mingw/: chrono  fstream
dependencies/mingw/bits/: c++config.h  fs_dir.h  fs_path.h  fstream.tcc
dependencies/mingw/experimental/: filesystem
dependencies/mingw/src/: bstr.cpp  fs_dir.cc  fs_ops.cc  fs_path.cc  inet_ntop.cpp
dependencies/openrazer-win32/linux/: hid.h  kernel.h  module.h
fedora/: OpenRGB.spec
hidapi_wrapper/: hidapi_wrapper.h
i2c_smbus/: i2c_smbus.cpp  i2c_smbus.h  i2c_smbus_amdadl.cpp  i2c_smbus_amdadl.h  i2c_smbus_i801.cpp  i2c_smbus_i801.h  i2c_smbus_linux.cpp  i2c_smbus_linux.h  i2c_smbus_nct6775.cpp  i2c_smbus_nvapi.cpp  i2c_smbus_nvapi.h  i2c_smbus_piix4.cpp  i2c_smbus_piix4.h  i2c_smbus_winmutex.cpp  i2c_smbus_winmutex.h
pci_ids/: pci_ids.h
qt/: DetectorTableModel.cpp  DetectorTableModel.h  DeviceView.cpp  OpenRGBClientInfoPage.cpp  OpenRGBClientInfoPage.h  OpenRGBDeviceInfoPage.cpp  OpenRGBDeviceInfoPage.ui  OpenRGBDevicePage.cpp  OpenRGBDevicePage.h  OpenRGBDevicePage.ui  OpenRGBDialog2.cpp  OpenRGBDialog2.h  OpenRGBDialog2.ui  OpenRGBFanPage.h  OpenRGBPluginContainer.cpp  OpenRGBSettingsPage.cpp  OpenRGBSettingsPage.h  OpenRGBSettingsPage.ui  OpenRGBSoftwareInfoPage.h  OpenRGBSupportedDevicesPage.cpp  OpenRGBSystemInfoPage.cpp  OpenRGBSystemInfoPage.h  OpenRGBSystemInfoPage.ui  OpenRGBUpdateInfoPage.cpp  OpenRGBUpdateInfoPage.h  PluginManager.cpp  PluginManager.h  resources.qrc  resources.rc
scripts/: AppImage.patch  build-appimage.sh  deploy-mingw-dlls.sh
serial_port/: find_usb_serial_port_linux.cpp  find_usb_serial_port_win.cpp  serial_port.cpp
super_io/: super_io.cpp
wmi/: acpiwmi.cpp  wmi.cpp  wmi.h
(+606 files in other folders)
