add_library(hidapi SHARED IMPORTED GLOBAL)
add_library(inpout SHARED IMPORTED GLOBAL)
add_library(libusb SHARED IMPORTED GLOBAL)

if(WIN32)
    if(CMAKE_CL_64)
        set_property(TARGET hidapi PROPERTY IMPORTED_IMPLIB   "${PROJECT_SOURCE_DIR}/hidapi-win/x64/hidapi.lib")
        set_property(TARGET hidapi PROPERTY IMPORTED_LOCATION "${PROJECT_SOURCE_DIR}/hidapi-win/x64/hidapi.dll")
        set_property(TARGET inpout PROPERTY IMPORTED_IMPLIB   "${PROJECT_SOURCE_DIR}/inpout32_1501/x64/inpoutx64.lib")
        set_property(TARGET inpout PROPERTY IMPORTED_LOCATION "${PROJECT_SOURCE_DIR}/inpout32_1501/x64/inpoutx64.dll")
        set_property(TARGET libusb PROPERTY IMPORTED_IMPLIB   "${PROJECT_SOURCE_DIR}/libusb-1.0.22/MS64/libusb.lib")
        set_property(TARGET libusb PROPERTY IMPORTED_LOCATION "${PROJECT_SOURCE_DIR}/libusb-1.0.22/MS64/libusb.dll")
    else()
        set_property(TARGET hidapi PROPERTY IMPORTED_IMPLIB   "${PROJECT_SOURCE_DIR}/hidapi-win/x86/hidapi.lib")
        set_property(TARGET hidapi PROPERTY IMPORTED_LOCATION "${PROJECT_SOURCE_DIR}/hidapi-win/x86/hidapi.dll")
        set_property(TARGET inpout PROPERTY IMPORTED_IMPLIB   "${PROJECT_SOURCE_DIR}/inpout32_1501/Win32/inpoutx64.lib")
        set_property(TARGET inpout PROPERTY IMPORTED_LOCATION "${PROJECT_SOURCE_DIR}/inpout32_1501/Win32/inpoutx64.dll")
        set_property(TARGET libusb PROPERTY IMPORTED_IMPLIB   "${PROJECT_SOURCE_DIR}/libusb-1.0.22/MS32/libusb.lib")
        set_property(TARGET libusb PROPERTY IMPORTED_LOCATION "${PROJECT_SOURCE_DIR}/libusb-1.0.22/MS32/libusb.dll")
    endif()
endif()